<resources>
    <string name="app_name">test</string>
    <string name="Arriving_in_5_mins">Arriving in 5 mins</string>
    <string name="account_type">Account Type</string>
    <string name="powered_by_adain">Powered by Adain</string>
    <string name="medical_personel">Medical Personel</string>
    <string name="ambulance_service">Ambulance Service</string>
    <string name="upload_your_medical_documents">Upload your Medical Documents</string>
    <string name="provide_a_clear_prove_of_address_document">Provide a clear prove of address document</string>
    <string name="provide_a_clear_photo_of_your_medical_liscence">Provide a clear photo of your medical liscence</string>
    <string name="provide_a_clear_photo_of_your_medical_certificate">Provide a clear photo of your medical certificate</string>
    <string name="finish">Finish</string>
    <string name="about_you">About you</string>
    <string name="more">More\nAbout You</string>
    <string name="aboutamb">About\nAmblance</string>

    <string name="medical_details">Medical Details</string>
    <string name="basic_details">Basic Details</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="nin">NIN</string>
    <string name="address">Address</string>
    <string name="patient">Patient</string>
    <string name="register_with_your_number">Register with your number</string>
    <string name="by_checking_this_box_you_accept_the_quickmed">By checking this box you accept the Quickmed</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="proceed">Proceed</string>
    <string name="arriving_in_5_mins">Arriving in 5 mins</string>
    <string name="description">Description:</string>
    <string name="location">Location</string>
    <string name="connecting">Connecting...</string>
    <string name="client_name_loading">Client Name : Loading</string>
    <string name="client">Client</string>
    <string name="chat">CHAT</string>
    <string name="call">CALL</string>
    <string name="do_you_really_want_to_cancel_treatement">Do you really want to cancel treatement?</string>
    <string name="if_you_do_you_might_wait_longer_to_get_another_doctor">If you do, You might wait longer to get another doctor</string>
    <string name="your_doctor_has_arrived">Your Doctor has arrived</string>
    <string name="payment_fee_to_your_destination_n1300">Payment fee to your Destination N1300</string>
    <string name="make_payment">Make Payment</string>
    <string name="back_to_map">Back to Map</string>
    <string name="to_start_treatment_comfirm_cash_payment_this_would_be_ddeducted_from_your_wallet">To start treatment comfirm cash payment this would be ddeducted from your wallet</string>
    <string name="client_has_not_made_any_payment_by_card">Client has not made any payment by card.</string>
    <string name="confirm_cash_payment">Confirm cash Payment</string>
    <string name="close">Close</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="select_your_specialty">Select your Specialty</string>
    <string name="dentistry">Dentistry</string>
    <string name="neurology">Neurology</string>
    <string name="psychiatry">Psychiatry</string>
    <string name="genetics">Genetics</string>
    <string name="paediatrician">Paediatrician</string>
    <string name="ophthaimology">Ophthaimology</string>
    <string name="public_health">Public Health</string>
    <string name="respirology">Respirology</string>
    <string name="hermatology">Hermatology</string>
    <string name="endocrinology">Endocrinology</string>
    <string name="urology">Urology</string>
    <string name="orthopedix">Orthopedix</string>
    <string name="gynacology">Gynacology</string>
    <string name="dermatology">Dermatology</string>
    <string name="surgery">Surgery</string>
    <string name="orthchinolaryngology">Orthchinolaryngology</string>
    <string name="next">Next</string>
    <string name="back">back</string>
    <string name="Back">Back</string>
    <string name="confirm">Confirm</string>
    <string name="next_of_kin">Next of kin</string>
    <string name="ambulance_detail">Ambulance Detail</string>
    <string name="drivers_detail">Drivers Detail</string>
    <string name="company_details">Company Details</string>
    <string name="company_phone_number">Company Phone number</string>
    <string name="company_address">Company Address</string>
    <string name="about_hospital">About \nHospital</string>
    <string name="hospital_details">Hospital Details</string>
    <string name="hospital_info">Hospital\n Info</string>
    <string name="hospital_detail">Hospital Details</string>
    <string name="emergency_details">Emergency Details</string>
    <string name="documents">Documents</string>
    <string name="hospital_emergency_number">Hospital Emergency number</string>
    <string name="n58_890">N58,890\n Fill form to Withdraw</string>
    <string name="wallet">Wallet</string>
    <string name="search">Search</string>
    <string name="connecting_with_ambulance">Connecting With \n Ambulance</string>
    <string name="cance">Cance</string>
    <string name="cancel">cancel</string>
    <string name="canc">Cancel</string>
    <string name="activate_location">Activate Location</string>
    <string name="listening_for_emergencies">Listening for Emergencies</string>
</resources>