<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payments">


    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@color/white"
        app:cardElevation="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:fontFamily="@font/c"
                android:gravity="center"
                android:text="@string/client_has_not_made_any_payment_by_card"

                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:fontFamily="@font/c"
                android:gravity="center"
                android:textColor="@color/black_text"
                android:text="@string/to_start_treatment_comfirm_cash_payment_this_would_be_ddeducted_from_your_wallet"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.55"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView27" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/c"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="@color/black_text"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.522"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView3" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:elevation="10dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView27">

                <TextView
                    android:padding="@dimen/_10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="@color/main_color"
                    android:gravity="center"
                    android:text="@string/confirm_cash_payment"
                    android:textColor="@color/white"


                    />
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>