<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payments">


    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@color/white"
        app:cardElevation="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp"
                android:fontFamily="@font/c"
                android:gravity="center"
                android:text="@string/if_you_do_you_might_wait_longer_to_get_another_doctor"

                android:textSize="15dp"
                android:textColor="@color/black_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView26" />


            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/e"
                android:gravity="center"
                android:textColor="@color/black_text"

                android:text="@string/do_you_really_want_to_cancel_treatement"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10dp"
                android:layout_marginRight="@dimen/_100dp"
                app:cardElevation="@dimen/_10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView27">

                <TextView
                    android:layout_width="@dimen/_75dp"
                    android:layout_height="@dimen/_50dp"
                    android:gravity="center"
                    android:text="@string/Back"
                    android:textSize="@dimen/_22dp" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_100dp"
                app:cardElevation="@dimen/_10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView27">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_50dp"
                    android:padding="@dimen/_5dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@color/main_color"
                    android:text="@string/confirm"
                    android:textSize="@dimen/_22dp" />
            </androidx.cardview.widget.CardView>







        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>